fix: strange effect when overflow was hidden on the actual animated container. overflow hidden on body istead.

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ button {
 body {
 	margin: 0;
 	min-height: 100vh;
+	overflow-x: hidden;
 }
 
 h1 {
